Part1/TodoApp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-todoapp
  template:
    metadata:
      labels:
        app: dwk-todoapp
    spec:
      volumes:
        - name: todoapp-volume
          persistentVolumeClaim:
            claimName: todoapp-volume-claim
      containers:
        - name: dwk-todoapp
          image: roaringduck/dwk-todoapp
          volumeMounts:
          - name: todoapp-volume
            mountPath: /usr/src/app/files
